# kiro-sonar-grupo-5

./: .gitignore  README.md  prompts.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/: AGENTS.md
.kiro/specs/ai-service/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/integration-tests-js/: .config.kiro  design.md  requirements.md  tasks.md
KiroSonar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
backend/: .env.example  pyproject.toml
backend/docs/: RFC-001-KiroSonar-MVP.md  avaliacao-qualidade.md  quality-rubric.md
backend/docs/tickets/: TASK-01-cli-base.md  TASK-02-git-diff.md  TASK-03-ai-service.md  TASK-04-report.md  TASK-05-autofix.md
backend/src/: __init__.py  __main__.py  ai_service.py  autofix.py  cli.py  config.py  git_module.py  prompt_builder.py  report.py
backend/tests/: __init__.py  mock_responses.py  test_ai_service.py  test_autofix.py  test_chunker.py  test_cli.py  test_git_module.py  test_integration_js.py  test_main.py  test_prompt_builder.py  test_report.py
backend/tests/js-project/: package.json
backend/tests/js-project/src/: callback_hell.js  code_smells.js  comparisons.js  console_logs.js  duplicate_code.js  error_handling.js  global_vars.js  security_issues.js  unreachable_code.js  unused_vars.js
frontend/docs/code-review/: TASK-01-review.md  TASK-02-review.md
frontend/src/: __init__.py  config.py  git_module.py
frontend/tests/: test_git_module.py
src/: cli.py  git_module.py
src/KiroSonar.egg-info/: SOURCES.txt  top_level.txt
tests/: test_cli.py  test_config.py
(+3 files in other folders)
