[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KiroSonar"
version = "0.1.0"
description = "Code Review Inteligente e Auto-Fix diretamente no seu terminal."
requires-python = ">=3.11"

[project.scripts]
kirosonar = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
