[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KiroSonar"
version = "0.1.0"
description = "Code Review Inteligente e Auto-Fix com IA no terminal"
requires-python = ">=3.11"
dependencies = ["python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
kirosonar = "src.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
